updated docs for win/lin/mac and ansible

--- a/configmgmt/playbooks/advanced.yml
+++ b/configmgmt/playbooks/advanced.yml
@@ -4,7 +4,7 @@
   remote_user: kwalker
 
   tasks:
-      - name: Do something
+      - name: Doing Something
         command: whoami
         register: ping
       - debug: msg="{{ping}}"
